Dnd Campaign Manager/src/assets/main.css
@import './base.css';
@import url('https://fonts.googleapis.com/css2?family=Eagle+Lake&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Eagle+Lake&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@600;700&family=Inter:wght@400;600&display=swap');


#app {
  max-width: 1280px;
  margin: 0 auto;
  font-weight: normal;
}

.login {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: left;
  text-align: center;
  margin : 40px auto;
  padding-top: 5vh;
  padding-bottom: 20px;
  padding-right: 60px;
  padding-left: 60px;
  border: 2px solid var(--vt-c-black);
  background-color: var(--vt-c-dark-grey);
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  max-width: 500px;
  color: var(--vt-c-warm-white);
  letter-spacing: 1px;
  font-family: "Cinzel", serif;
  font-size: 1rem;
  line-height: 1.6;
}

.homePage {
  display: flex;
  align-items: center;
  flex-direction:column;  
  justify-content:center;
  min-height: 90vh;
  padding-top:20px;
  padding-bottom:20px;
  padding-right:60px;
  padding-left:60px;
  max-width: 1300px; 
  color: var(--vt-c-warm-white);
  text-align: center;
  font-family: "Cinzel", serif;
  font-size: 1rem;
  letter-spacing: 1px;
  line-height: 1.6;
}

.campaignPage {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: flex-start;
  min-height: 50vh;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 60px;
  padding-left: 60px;
  max-width: 1300px;
  /* margin: 0px auto; */
  color: var(--vt-c-warm-white);
  text-align: center;
  font-family: "Cinzel", serif;
  font-size: 1rem;
  letter-spacing: 1px;
  line-height: 1.6;
}

.charPage {
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  min-height: 90vh;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-right: 60px;
  padding-left: 60px;
  max-width: 1300px;
  /* margin: 40px auto; */
  color: var(--vt-c-warm-white);
  text-align: center;
  letter-spacing: 1px;
  font-family: "Cinzel", serif;
  font-size: 1rem;
  line-height: 1.6;
}

.topbar {
display: flex; /* Makes the container a flex container */
justify-content: space-between;/* Distributes space between items */
align-items:center;  /* Aligns items vertically in the center */
border-bottom: 5px solid var(--vt-c-red);
background-color: var(--vt-c-dark-grey);
color: var(--vt-c-golden);
position: relative;
top: 0;
}

.topbarLogin {
display: flex; /* Makes the container a flex container */
align-items: center;  /* Aligns items vertically in the center */
border-bottom: 5px solid var(--vt-c-red);
background-color: var(--vt-c-dark-grey);
color: var(--vt-c-golden);
position: relative;
top: 0;
padding-top: 0.67rem;
padding-bottom: 0.65rem;
padding-left: 0.65rem;
}

button {
  background-image: url('PaperTexture.png');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-color: var(--vt-c-parchment);
  color: var(--vt-c-dark-brown);
  border: 2px solid var(--vt-c-bronze);
  border-radius: 9px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  padding: 0.75rem 1.5rem;
  margin: 0.5rem;
  cursor: pointer;
  min-width: 250px;
  font-size: 1rem;
  font-family: "Cinzel", serif;
  transition: all 0.2s ease-in-out;
  text-shadow: 0 2px 2px rgba(0,0,0,0.25), 0 0 5px rgba(255,255,255,0.1);
    background: radial-gradient(
    circle at center, rgba(0, 0, 0, 0) 60%, /* center */ #ffe9b1 100% /* outside */), 
    url('PaperTextureCalm.png'
  );
  background-blend-mode: multiply;
}

button:hover {
  color: var(--vt-c-red);
  border-color: var(--vt-c-bronze);
  transform: translateY(-2px);
  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);

}

h1 {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: "Eagle Lake", serif;
  font-weight: 400;
  font-size: 2rem;
  color: var(--vt-c-golden);
}

h2 {
  font-family: "Cinzel", serif;
  font-size: 2rem;
  letter-spacing: 1px;
  margin-bottom: .75rem;
  color: var(--vt-c-golden);
}

p {
  font-family: "Cinzel", serif;
  font-size: 1rem;
  letter-spacing: 1px;
  line-height: 1.6;
}

input {
  padding: 5px;
  margin: 10px 0; 
  border: 1px solid var(--vt-c-bronze);
  background-color: var(--vt-c-dark-grey);
  color: var(--vt-c-red);
  border-radius: 5px;
  width: 350px;
  max-width: 600px;
}

.CardSpacing {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
  margin-bottom: 1rem;
}

.Card:hover {
  transform: scale(1.03); /* ASK TEAM SCALE OR MOVE UP */
  color: var(--vt-c-red);
}

.Card {
  /* background-image: url('PaperTexture.png'); */
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  flex: 0 0 calc(25% - 20px);
  min-width: 300px;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
  padding: 30px;
  width: 200px;
  text-align: center;
  background-color: var(--vt-c-parchment);
  color: var(--vt-c-dark-brown);
  border: 2px solid var(--vt-c-bronze);
  text-shadow: 0 2px 2px rgba(0,0,0,0.25), 0 0 5px rgba(255,255,255,0.1);
  background: radial-gradient(
    circle at center, rgba(0, 0, 0, 0) 60%, /* center */ #ffe9b1 100% /* outside */), 
    url('PaperTextureCalm.png'
  );
  background-blend-mode: multiply;
}


.popup{
  /* min-height: 600px;
  max-height: 90vh; */
  background:transparent url('Scroll2.png') no-repeat center/contain;
  aspect-ratio: 3 / 4;
  color: var(--vt-c-dark-brown);
  /* max-width: 600px; */
  width: min(99%, 500px);
  height: min(99%, 700px);
  margin: 40px auto;
  text-align: center;
  line-height: 1.6;
  font-size: 0.85rem;
  /* overflow-y: auto; */
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;

  .popuptxt {
    /* flex: 1; */
    display: flex;
    flex-direction: column;
    justify-content: center; /* centers short text vertically inside itself */
    align-items: center;
    max-height: 70%; /* confines it to the “paper” area */
    /* padding: 1rem; */
    box-sizing: border-box;
    overflow-y: auto;
    padding-left: 2rem;
    padding-right: 2rem;
    /*padding: 20% 30px 10%;  Adjust top padding so text sits nicely on the scroll */
    /*max-height: calc(90vh - 20px);  Keeps it inside the image */
    width: 85%;
    margin: 0px auto;
  }

  button{
  background-image: none;
  background-color: none;
  color: var(--vt-c-red);
  border: none;
  text-decoration: underline;
  padding: 0.75rem 1.5rem;
  margin: 0.5rem;
  cursor: pointer;
  min-width: 250px;
  text-shadow: 0 2px 2px rgba(0,0,0,0.25), 0 0 5px rgba(255,255,255,0.1);
  box-shadow: none;
  background: none;
  }

}

.modal {
  display: none;  /* Hidden by default */
  position: fixed;
  z-index: 1;
  inset: 0;
  overflow: auto;  /* Enable scroll if needed */
  justify-content:center;
  align-items: center;
  backdrop-filter: blur(3px);
  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
}


/* .dropdown {
  position: relative;
  display: inline-block;
  text-align: center;
} */
 select {
  background: var(--vt-c-dark-grey);
  border: 2px solid var(--vt-c-red);
  color: var(--vt-c-red);
  padding: 0.5rem 0.75rem;
  border-radius: 6px;
  font-family: "Cinzel", serif;
  transition: border-color 0.2s ease;
  margin-top: 0.5rem;
  margin-bottom: 1.5rem;
  text-shadow: 0 2px 2px rgba(0,0,0,0.25), 0 0 5px rgba(255,255,255,0.1);

}

select:focus, input:focus {
  outline: none;
  border-color: var(--accent-red);
}


::-webkit-scrollbar {
  width: 12px;
  height: 12px; /* for horizontal scrollbars */
}

/* Track (the background) */
::-webkit-scrollbar-track {
  background: #1e1e1e; /* dark grey */
  border-radius: 10px;
}

/* Handle (the draggable part) */
::-webkit-scrollbar-thumb {
  background: #35302f; /* lighter grey */
  border-radius: 10px;
  border: 2px solid #1e1e1e; /* small gap */
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #514c4a; /* even lighter grey when hovered */
}

